java-samples: code format.